package sase.adaptive.monitoring;

public enum AdaptationNecessityDetectorTypes {
	NONE,
	TRIVIAL,
	INVARIANT,
	RECOMPUTE,
	PERFORMANCE,
	CONSTANT_THRESHOLD,
}
